add lepiter split and merge documentation

--- a/lepiterdb/lepiter.properties
+++ b/lepiterdb/lepiter.properties
@@ -1,6 +1,6 @@
 {
 	"uuid" : "fafe4edd-628e-0d00-a0b9-428e0ebc096d",
-	"tableOfContents" : "6ge36e5dx4j6vjt1jpdgs48rd",
+	"tableOfContents" : "7yowdlcas0ye18f67z1dukhi6",
 	"schema" : "4.1",
-	"databaseName" : "Glamorous Lenses"
+	"databaseName" : "Glamorous Lenses Book"
 }
